# Revision history for git-vaudeville

NEXT
    - make hook directories configurable. (GH#6)

0.0.2 2019-11-12
    - add sadness when there is no hook. (GH#1)
    - credit Gizmo Mathboy for the name. (GH#3)
    - mention alternatives. (GH#7)
    - add --stdin option for 'run'. (GH#5)
    - abort hook chain if one of them fails.
    - print the name of the phase when running its hooks. (GH#4)
    - don't try to read stdin if there's nothign there. (GH#8)

0.0.1 2019-11-11
    - Initial release.